added button without icons

--- a/lib/Toggle/style.scss
+++ b/lib/Toggle/style.scss
@@ -18,12 +18,12 @@
   --hover-circle-background: rgb(228, 230, 231);
 }
 
-.sm{
+.toggle-sm{
   --width: 2rem;
   --height: 17px;
 }
 
-.md{
+.toggle-md{
   --width: 3rem;
   --height: 25px;
 }
