--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -2,8 +2,8 @@
   &-container {
     //dev
     border: 1px solid gray;
-    width: 5em;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -13,17 +13,27 @@
   &-circle {
     background-color: rebeccapurple;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 80%;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+  }
+
+  &-icon {
+
   }
 
   &-label {
     width: max-content;
-    max-width: 180%;
-    height: min-content;
-    max-height: 30%;
+    max-width: 150%;
     text-align: center;
-    margin-top: 8px;
+    padding-top: 8px;
   }
 }
