--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -4,8 +4,8 @@
 .stepper {
   &-container {
     //dev
-    border: 1px solid darkred;
-    width: 100%;
+    //border: 1px solid darkred;
+    width: 75%;
     height: 100%;
     padding: 5px;
     display: grid;
