--- a/src/Stepper/Link/Link.scss
+++ b/src/Stepper/Link/Link.scss
@@ -4,7 +4,8 @@
   }
 
   &-wrapper {
-    width: 80%;
+    //must be as in the .step-circle
+    width: 40%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -18,10 +19,18 @@
   }
 
   &-strip {
-    border: 1px solid darkmagenta;
-    border-radius: 15%;
     width: 100%;
-    height: 5px;
+
+    &:after {
+      content: "";
+      display: block;
+      background-color: rebeccapurple;
+      border-radius: 3px;
+      width: 280%;
+      height: 3px;
+      position: relative;
+      right: 95%;
+    }
   }
 }
 
