--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -1,23 +1,33 @@
 .step {
   &-container {
     //dev
-    border: 1px solid gray;
+    //border: 1px solid gray;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
+
+    cursor: pointer;
+
+    &:hover {
+      .step-circle {
+        background-color: plum;
+      }
+    }
   }
 
   &-circle {
     background-color: rebeccapurple;
     border-radius: 50%;
-    width: 80%;
+    width: 40%;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    transition: background-color 200ms;
 
     &:after {
       content: "";
