--- a/src/Stepper/Link/Link.scss
+++ b/src/Stepper/Link/Link.scss
@@ -24,7 +24,7 @@
     &:after {
       content: "";
       display: block;
-      background-color: rebeccapurple;
+      background-color: #D65DB1;
       border-radius: 3px;
       width: 280%;
       height: 3px;
