--- a/src/Input/styles.css
+++ b/src/Input/styles.css
@@ -2,6 +2,13 @@
     margin-bottom: 1rem;
 }
 
+label {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 300;
+    color: #5a6169;
+}
+
 .form-control {
     display: block;
     width: 100%;
@@ -18,12 +25,14 @@
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
 }
+
 .form-control:focus {
     color: #495057;
     background-color: #fff;
     border-color: #007bff;
     box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
 }
+
 .form-control:hover {
     border-color: #8fa4b8;
 }
