--- a/lib/Stepper/Link/Link.scss
+++ b/lib/Stepper/Link/Link.scss
@@ -10,7 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 
+    //for rectangle proportions
     &:after {
       content: "";
       display: block;
@@ -19,17 +21,16 @@
   }
 
   &-strip {
-    width: 100%;
+    background-color: rgba(214,93,177,0.2);
+    border-radius: 3px;
+    height: 1.5px;
+    width: 280%;
+    transition: background-color 400ms ease;
+    position: absolute;
 
-    &:after {
-      content: "";
-      display: block;
-      background-color: #D65DB1;
-      border-radius: 3px;
-      width: 280%;
-      height: 3px;
-      position: relative;
-      right: 95%;
+    &.--before-selected {
+      background-color: rgba(214,93,177,1);
+
     }
   }
 }
