--- a/lib/Stepper/Step/Step.scss
+++ b/lib/Stepper/Step/Step.scss
@@ -1,7 +1,5 @@
 .step {
   &-container {
-    //dev
-    //border: 1px solid gray;
     width: 100%;
     height: 100%;
     display: flex;
@@ -10,11 +8,16 @@
     align-items: center;
 
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     &:hover {
       .step-circle {
         background-color: #FFC75F;
       }
+    }
+
+    &:active {
+      background-color: transparent;
     }
   }
 
@@ -42,7 +45,7 @@
     &.--selected {
       background-color: #D65DB1 !important;
       border: 2px solid white;
-      box-shadow: 0 0 0 2px darkseagreen;
+      box-shadow: 0 0 0 2px #D65DB1;
     }
   }
 
@@ -54,6 +57,7 @@
     width: max-content;
     max-width: 150%;
     text-align: center;
+    font-size: smaller;
     padding-top: 8px;
 
     &.--selected {
