--- a/src/Input/styles.css
+++ b/src/Input/styles.css
@@ -8,6 +8,32 @@ label {
     font-weight: 300;
     color: #5a6169;
 }
+.form-control--start,
+.form-control--end,
+.input-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-control--start,
+.form-control--end
+{
+    padding: 0.5rem 1rem;
+    border: 1px solid #becad6;
+}
+
+.form-control--start {
+    border-right: none;
+    border-top-left-radius: 0.375rem;
+    border-bottom-left-radius: 0.375rem;
+}
+
+.form-control--end {
+    border-left: none;
+    border-top-right-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+}
 
 .form-control {
     display: block;
@@ -24,6 +50,18 @@ label {
     border-radius: 0.375rem;
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
+}
+
+.form-control.no-start-border {
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-control.no-end-border {
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .form-control:focus {
