--- a/lib/Input/styles.css
+++ b/lib/Input/styles.css
@@ -11,16 +11,18 @@ label {
 .form-control--start,
 .form-control--end,
 .input-group {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 5rem 1fr 5rem;
     align-items: center;
+    overflow: hidden;
 }
 
 .form-control--start,
 .form-control--end
 {
-    padding: 0.5rem 1rem;
+    height: 100%;
     border: 1px solid #becad6;
+    text-align: center;
 }
 
 .form-control--start {
