--- a/src/Input/styles.css
+++ b/src/Input/styles.css
@@ -88,6 +88,12 @@ label {
     box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
 }
 
+.form-control.no-start-border:focus,
+.form-control.no-end-border:focus {
+    box-shadow: none;
+    border-color: #becad6;
+}
+
 .form-control:hover {
     border-color: #8fa4b8;
 }
