--- a/src/Input/styles.css
+++ b/src/Input/styles.css
@@ -1,12 +1,29 @@
 .form-group {
     margin-bottom: 1rem;
+    position: relative;
 }
 
 label {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     font-size: 1rem;
     font-weight: 300;
     color: #5a6169;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transform: translate(10px,5px) scale(1);
+    background: #fff;
+    padding: 4px;
+    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+}
+
+label.--moved {
+    transform: translate(14px, -14px) scale(0.75);
+}
+
+label.--focused {
+    color: #007bff;
 }
 
 .input-group {
