--- a/lib/TextArea/styles.css
+++ b/lib/TextArea/styles.css
@@ -42,33 +42,6 @@ label.--focused {
     min-width: 0;
 }
 
-.form-control--start,
-.form-control--end
-{
-    border: 1px solid #becad6;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    white-space: nowrap;
-}
-
-.form-control--start {
-    border-right: none;
-    border-top-left-radius: 0.375rem;
-    border-bottom-left-radius: 0.375rem;
-}
-
-.form-control--end {
-    border-left: none;
-    border-top-right-radius: 0.375rem;
-    border-bottom-right-radius: 0.375rem;
-}
-
 .form-control {
     display: block;
     width: 100%;
@@ -84,18 +57,11 @@ label.--focused {
     border-radius: 0.375rem;
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
+    resize: none;
 }
 
-.form-control.no-start-border {
-    border-left: none;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-control.no-end-border {
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+.form-control.resize {
+    resize: both;
 }
 
 .form-control:focus {
@@ -103,13 +69,6 @@ label.--focused {
     background-color: #fff;
     border-color: #007bff;
     box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
-}
-
-.form-control.no-start-border:focus,
-.form-control.no-end-border:focus {
-    box-shadow: none;
-    border-color: #becad6;
-    outline: none;
 }
 
 .form-control:hover {
