--- a/src/Stepper/Link/Link.scss
+++ b/src/Stepper/Link/Link.scss
@@ -26,7 +26,7 @@
     border-radius: 3px;
     height: 1.5px;
     width: 280%;
-    transition: opacity 500ms ease;
+    transition: opacity 400ms;
     position: absolute;
 
     &.--before-selected {
