--- a/lib/TextArea/styles.css
+++ b/lib/TextArea/styles.css
@@ -57,11 +57,11 @@ label.--focused {
     border-radius: 0.375rem;
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
-    resize: none;
+    resize: none !important;
 }
 
 .form-control.resize {
-    resize: both;
+    resize: both !important;
 }
 
 .form-control:focus {
