--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -8,5 +8,11 @@
     padding: 5px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
+
+    &.--vertical {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
 }
