--- a/lib/Stepper/Link/Link.scss
+++ b/lib/Stepper/Link/Link.scss
@@ -1,9 +1,5 @@
 .link {
   &-container {
-    width: 100%;
-  }
-
-  &-wrapper {
     //must be as in the .step-circle
     width: 40%;
     margin: 0 auto;
@@ -12,7 +8,6 @@
     justify-content: center;
     position: relative;
 
-    //for rectangle proportions
     &:after {
       content: "";
       display: block;
@@ -26,7 +21,7 @@
     border-radius: 3px;
     height: 1.5px;
     width: 280%;
-    transition: opacity 500ms ease;
+    transition: opacity 400ms;
     position: absolute;
 
     &.--before-selected {
