--- a/src/Stepper/Link/Link.scss
+++ b/src/Stepper/Link/Link.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     position: relative;
 
-    &:after {
+    &::after {
       content: "";
       display: block;
       padding-bottom: 100%;
@@ -23,10 +23,27 @@
     width: 280%;
     transition: opacity 400ms;
     position: absolute;
+  }
+}
 
-    &.--before-selected {
-      opacity: 1;
+.--before-selected {
+  .link-strip {
+    opacity: 1;
+  }
+}
+
+.--vertical {
+  .link-container {
+    height: 100%;
+
+    &::after {
+      padding-bottom: 0;
     }
+  }
+
+  .link-strip {
+    height: 100%;
+    width: 1.5px;
   }
 }
 
