--- a/src/Input/styles.css
+++ b/src/Input/styles.css
@@ -3,7 +3,7 @@
     position: relative;
 }
 
-label {
+label.inp-label {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     font-size: 1rem;
     font-weight: 300;
