feat: add showCompletedCount counter

--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -8,6 +8,13 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
   }
+
+  &-counter {
+    width: max-content;
+    margin: 0 auto;
+
+    font-size: x-small;
+  }
 }
 
 .--vertical {
