--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -61,6 +61,10 @@
     flex-direction: column;
 
     color: var(--label);
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
   }
 
   &-sublabel {
@@ -84,7 +88,7 @@
   }
 
   .step-sublabel {
-    font-weight: bolder;
+    font-weight: bold;
   }
 }
 
