--- a/lib/Stepper/Step/Step.scss
+++ b/lib/Stepper/Step/Step.scss
@@ -61,6 +61,10 @@
     flex-direction: column;
 
     color: var(--label);
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
   }
 
   &-sublabel {
@@ -84,7 +88,11 @@
   }
 
   .step-sublabel {
-    font-weight: bolder;
+    font-weight: bold;
+  }
+
+  &.--disabled .step-circle {
+    opacity: 0.6;
   }
 }
 
@@ -95,6 +103,10 @@
 
   .step-circle:not(.--none):not(.--partial) {
     background-color: var(--circle);
+  }
+
+  &.--disabled .step-circle {
+    opacity: 0.6;
   }
 }
 
@@ -132,5 +144,13 @@
 
   &.--done {
     background-color: var(--circle);
+  }
+}
+
+.stepper-item.--disabled .step-container:hover {
+  cursor: default;
+
+  .step-circle {
+    box-shadow: none;
   }
 }
