--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -90,6 +90,10 @@
   .step-sublabel {
     font-weight: bold;
   }
+
+  &.--disabled .step-circle {
+    opacity: 0.6;
+  }
 }
 
 .--before-selected {
@@ -99,6 +103,10 @@
 
   .step-circle:not(.--none):not(.--partial) {
     background-color: var(--circle);
+  }
+
+  &.--disabled .step-circle {
+    opacity: 0.6;
   }
 }
 
@@ -136,5 +144,13 @@
 
   &.--done {
     background-color: var(--circle);
+  }
+}
+
+.stepper-item.--disabled .step-container:hover {
+  cursor: default;
+
+  .step-circle {
+    box-shadow: none;
   }
 }
