--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -4,6 +4,7 @@
 .stepper {
   &-container {
     width: 100%;
+    max-height: 100%;
     padding: 5px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
@@ -26,6 +27,9 @@
   }
 
   .stepper-item {
-    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    height: max-content;
   }
 }
