--- a/src/Popover/styles.scss
+++ b/src/Popover/styles.scss
@@ -1,5 +1,47 @@
-.popover-target{
-  display: inline-block;
+
+.popover-element{
   width: fit-content;
   height: fit-content;
+  display: inline-block;
+  background: transparent;
+  position: relative;
+}
+
+.popover-content{
+  position: absolute;
+  top: 0;
+  left: 0;
+  --popover-arrow-top: 0;
+  --popover-arrow-left: 0;
+  --popover-arrow-size: 16px;
+  --popover-border-width: 1px;
+
+  --popover-arrow-border-top: none;
+  --popover-arrow-border-bottom: none;
+  --popover-arrow-border-left: none;
+  --popover-arrow-border-right: none;
+
+  --popover-arrow-size-with-border: calc(var(--popover-arrow-size) + 2 * var(--popover-border-width));
+ // --translate-param: calc( 1.41 * var(--popover-arrow-size-with-border)  /2);
+}
+
+.arrow::before{
+  content: "";
+  z-index: -1;
+  position: absolute;
+
+  background-color: #FFF;
+//  --second-transform-param: calc(0 - var(--translate-param));
+  transform: translate(var(--popover-border-width), - 50%) rotate(45deg);
+
+  height: var(--popover-arrow-size);
+  width: var(--popover-arrow-size);
+
+  top: var(--popover-arrow-top);
+  left: var(--popover-arrow-left);
+
+  border-left: var(--popover-arrow-border-left);
+  border-top: var(--popover-arrow-border-top);
+  border-right: var(--popover-arrow-border-right);
+  border-bottom: var(--popover-arrow-border-bottom);
 }
