--- a/lib/Pill/styles.scss
+++ b/lib/Pill/styles.scss
@@ -86,6 +86,34 @@
   }
 }
 
+.pill-icon {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+
+  &.--delete {
+    padding: 2px;
+    cursor: pointer;
+    background: #cecece;
+    border-radius: 50%;
+    margin-right: 5px;
+    &:hover {
+      background: #e0e0e0;
+      transform: scale(1.1);
+    }
+  }
+
+  .--primary &.--delete {
+    background: rgb(255, 255 ,255);
+    color: rgb(25,118, 210);
+  }
+
+  .--negative &.--delete {
+    background: rgb(255, 255 ,255);
+    color: rgb(220, 0, 78);
+  }
+}
+
 .pill-label {
   overflow: hidden;
   white-space: nowrap;
