--- a/src/Stepper/Arrows/Arrows.scss
+++ b/src/Stepper/Arrows/Arrows.scss
@@ -17,13 +17,24 @@
 
   &-icon {
     cursor: pointer;
+    border-radius: 25%;
+    position: relative;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     &:hover {
-      background-color: var(--link);
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        background-color: var(--link);
+        opacity: 0.25;
+      }
     }
   }
 }
