--- a/lib/Stepper/Arrows/Arrows.scss
+++ b/lib/Stepper/Arrows/Arrows.scss
@@ -24,6 +24,8 @@
     justify-content: center;
     align-items: center;
 
+    padding: 5px;
+
     &:hover {
       &::after {
         content: '';
