--- a/src/Stepper/Stepper.scss
+++ b/src/Stepper/Stepper.scss
@@ -3,21 +3,28 @@
 
 .stepper {
   position: relative;
-  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+
+  &-wrapper {
+    overflow: hidden;
+    margin: 0 auto;
+  }
 
   &-container {
     width: 100%;
     max-height: 100%;
     padding: 5px 0;
-    display: grid;
+    display: flex;
     position: relative;
-    grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
 
     transition: right 200ms ease;
   }
 
   &-item {
-    //hide the first & the last step-line
+    width: 200px;
+
+    //hide first & last step-line
     &:first-child .step-container .step-item:first-child, &:last-child .step-container .step-item:last-child {
       visibility: hidden;
     }
