--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -11,7 +11,7 @@
 
     &:hover {
       .step-circle {
-        box-shadow: 0 0 0 2px var(--circle);
+        box-shadow: 0 0 0 2px var(--circle-color);
       }
     }
 
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
 
-    color: var(--label);
+    color: var(--label-color);
 
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -55,7 +55,7 @@
   &-line {
     flex: 1 1 0;
     width: 100%;
-    background-color: var(--link);
+    background-color: var(--link-color);
     opacity: 0.2;
     border-radius: 3px;
     height: 1px;
@@ -63,15 +63,15 @@
   }
 
   &-circle {
-    //flex: 1 1 auto;
     background-color: transparent;
     opacity: 0.25;
     border-radius: 50%;
-    border: 2px solid var(--circle);
+    border: 2px solid var(--circle-color);
 
-    //padding: 0 0.325rem;
-    width: 2rem;
-    height: 2rem;
+    //width: 2rem;
+    //height: 2rem;
+    width: var(--circle-size);
+    height: var(--circle-size);
     margin: 0 1rem;
     display: flex;
     align-items: center;
@@ -87,8 +87,6 @@
     width: 100%;
     height: 100%;
   }
-
-
 }
 
 .--selected {
@@ -100,11 +98,11 @@
 
   .step-circle {
     opacity: 1;
-    box-shadow: 0 0 0 2px var(--circle);
+    box-shadow: 0 0 0 2px var(--circle-color);
   }
 
   .step-circle:not(.--none):not(.--partial) {
-    background-color: var(--circle);
+    background-color: var(--circle-color);
   }
 
   .step-label {
@@ -133,7 +131,7 @@
   }
 
   .step-circle:not(.--none):not(.--partial) {
-    background-color: var(--circle);
+    background-color: var(--circle-color);
   }
 
   &.--disabled .step-circle {
@@ -164,11 +162,11 @@
 
 .step-circle {
   &.--partial {
-    border: 2px dashed var(--circle);
+    border: 2px dashed var(--circle-color);
   }
 
   &.--done {
-    background-color: var(--circle);
+    background-color: var(--circle-color);
   }
 }
 
