--- a/src/Stepper/Stepper.scss
+++ b/src/Stepper/Stepper.scss
@@ -7,6 +7,8 @@
     justify-content: space-between;
     width: 100%;
     //height: 100%;
+
+    //border: 1px solid black;
   }
 
   &-item {
@@ -50,8 +52,8 @@
 }
 
 .arrow {
-  height: 100%;
-  padding: 5px 0;
+  height: max-content;
+  margin-top: 5px;
 
   display: flex;
   justify-content: center;
@@ -66,7 +68,8 @@
   }
 
   &-icon {
-    height: 100%;
+    width: var(--circle-size);
+    height: var(--circle-size);
     cursor: pointer;
     border-radius: 25%;
     position: relative;
@@ -85,7 +88,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: var(--link);
+        background-color: var(--link-color);
         opacity: 0.25;
       }
     }
