--- a/lib/Stepper/Step/Step.scss
+++ b/lib/Stepper/Step/Step.scss
@@ -1,7 +1,6 @@
 .step {
   &-container {
     width: 100%;
-    //height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -21,17 +20,13 @@
   }
 
   &-body {
-    height: 40%;
     width: 100%;
-    flex-direction: row;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
   &-label {
-    height: 60%;
     max-width: 100%;
     text-align: center;
     font-size: 1rem;
@@ -138,24 +133,32 @@
 }
 
 .--vertical {
-  .step-container {
-    flex-direction: row;
-    height: 100%;
-    width: 25%;
-    margin: 0 auto;
-  }
+ .step {
+   &-container {
+     flex-direction: row;
+     justify-content: center;
+     height: 120px;
+     position: relative;
+   }
 
-  .step-circle {
-    width: 100%;
-  }
+   &-body {
+     height: 100%;
+     width: max-content;
+     max-width: 100px;
+     flex-direction: column;
+   }
 
-  .step-label {
-    position: absolute;
-    left: calc(100% + 15px);
-    padding-top: 0;
-    max-width: 400%;
-    text-align: left;
-  }
+   &-line {
+     height: 100%;
+     width: 1px;
+   }
+
+   &-label {
+     text-align: left;
+     position: absolute;
+     left: calc(50% + var(--circle-size));
+   }
+ }
 }
 
 .step-circle {
