--- a/src/Button/styles.scss
+++ b/src/Button/styles.scss
@@ -140,9 +140,17 @@
   white-space: nowrap;
   margin: auto;
 
+  .button-label{
+    cursor: pointer;
+  }
+
   &.disabled{
     background: #ededed;
     color: #a5a5a5;
+
+    .button-label{
+      cursor: default;
+    }
   }
 
 
