--- a/lib/Button/_button.scss
+++ b/lib/Button/_button.scss
@@ -18,108 +18,102 @@
 
   --height: 1.5rem;
   --font-size: 1rem;
+
+  //SIZE
+  &.button-sm{
+    --height: 1.5rem;
+    --font-size: 0.75rem;
+  }
+
+  &.button-md{
+    --height: 2rem;
+    --font-size: 1rem;
+  }
+
+  &.button-lg{
+    --height: 2.5rem;
+    --font-size: 1.5rem;
+  }
+
+  //VARIANT
+  &.secondary{
+    --base-color: rgb(228, 230, 231);
+    --hover-base-color:rgb(227, 227, 227);
+
+    //--border-color: rgb(172, 180, 181);
+    //--hover-border-color: rgb(30, 133, 109);
+
+    --text-color: black;
+    --hover-text-color: rgb(30, 133, 109);
+  }
+
+  &.primary{
+    --base-color: rgb(30, 133, 109);
+    --hover-base-color: rgb(15, 67, 55);
+
+    //--border-color: rgb(15, 67, 55);
+    //--hover-border-color: rgb(10, 46, 38);
+
+    --text-color: white;
+  }
+
+  &.primary-positive{
+
+    --base-color: rgb(37, 131, 43);
+    --hover-base-color: rgb(22, 79, 26);
+
+    //--border-color: rgb(22, 79, 26);
+    //--hover-border-color: rgb(17, 61, 20);
+
+    --text-color: white;
+  }
+
+  &.primary-negative{
+    --base-color: rgb(200, 60, 54);
+    --hover-base-color: rgb(120, 36, 32);
+
+    //--border-color: rgb(120, 36, 32);
+    //--hover-border-color: rgb(120, 36, 32);
+
+    --text-color: white;
+  }
+
+  &.secondary-positive{
+    --base-color: rgb(201, 224, 202);
+    --hover-base-color: rgb(171, 214, 173);
+
+    //--border-color: rgb(37, 131, 43);
+    //--hover-border-color: rgb(22, 79, 26);
+
+    --text-color: rgb(22, 79, 26);
+  }
+
+  &.secondary-negative{
+    --base-color: rgb(241, 206, 205);
+    --hover-base-color: rgb(240, 167, 165);
+
+    //--border-color:  rgb(200, 60, 54);
+    //--hover-border-color: rgb(120, 36, 32);
+
+    --text-color: rgb(120, 36, 32);
+  }
+
+  &.tertiary{
+    --base-color: rgba(255, 255, 255, 0);
+    --hover-base-color: rgba(255, 255, 255, 0);
+    //--border-color: rgb(172, 180, 181);
+    //--hover-border-color: rgb(30, 133, 109);
+    --text-color: rgb(22, 27, 28);
+    --hover-text-color: rgb(30, 133, 109);
+  }
+
+  &.inherit{
+    --base-color: rgb(239, 239, 239);
+    //--border-color: rgb(118, 118, 118);
+    //--hover-border-color: rgb(30, 133, 109);
+    --text-color: black;
+  }
 }
-
-//SIZE
-.button-sm{
-  --height: 1.5rem;
-  --font-size: 0.75rem;
-}
-
-.button-md{
-  --height: 2rem;
-  --font-size: 1rem;
-}
-
-.button-lg{
-  --height: 2.5rem;
-  --font-size: 1.5rem;
-}
-
-//VARIANT
-.secondary{
-  --base-color: rgb(228, 230, 231);
-  --hover-base-color:rgb(227, 227, 227);
-
-  //--border-color: rgb(172, 180, 181);
-  //--hover-border-color: rgb(30, 133, 109);
-
-  --text-color: black;
-  --hover-text-color: rgb(30, 133, 109);
-}
-
-.primary{
-  --base-color: rgb(30, 133, 109);
-  --hover-base-color: rgb(15, 67, 55);
-
-  //--border-color: rgb(15, 67, 55);
-  //--hover-border-color: rgb(10, 46, 38);
-
-  --text-color: white;
-}
-
-.primary-positive{
-
-  --base-color: rgb(37, 131, 43);
-  --hover-base-color: rgb(22, 79, 26);
-
-  //--border-color: rgb(22, 79, 26);
-  //--hover-border-color: rgb(17, 61, 20);
-
-  --text-color: white;
-}
-
-.primary-negative{
-  --base-color: rgb(200, 60, 54);
-  --hover-base-color: rgb(120, 36, 32);
-
-  //--border-color: rgb(120, 36, 32);
-  //--hover-border-color: rgb(120, 36, 32);
-
-  --text-color: white;
-}
-
-.secondary-positive{
-  --base-color: rgb(201, 224, 202);
-  --hover-base-color: rgb(171, 214, 173);
-
-  //--border-color: rgb(37, 131, 43);
-  //--hover-border-color: rgb(22, 79, 26);
-
-  --text-color: rgb(22, 79, 26);
-}
-
-.secondary-negative{
-  --base-color: rgb(241, 206, 205);
-  --hover-base-color: rgb(240, 167, 165);
-
-  //--border-color:  rgb(200, 60, 54);
-  //--hover-border-color: rgb(120, 36, 32);
-
-  --text-color: rgb(120, 36, 32);
-}
-
-.tertiary{
-  --base-color: rgba(255, 255, 255, 0);
-  --hover-base-color: rgba(255, 255, 255, 0);
-
-  //--border-color: rgb(172, 180, 181);
-  //--hover-border-color: rgb(30, 133, 109);
-
-  --text-color: rgb(22, 27, 28);
-  --hover-text-color: rgb(30, 133, 109);
-}
-
-.inherit{
-  --base-color: rgb(239, 239, 239);
-
-  //--border-color: rgb(118, 118, 118);
-  //--hover-border-color: rgb(30, 133, 109);
-
-  --text-color: black;
-}
-
-
 
 .swf-button{
   min-width: 10px;
@@ -153,44 +147,43 @@
     }
   }
 
-
-}
-
-.content{
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.has-icon{
-  padding: 0 calc(var(--font-size) / 2);
-}
-
-.button-icon{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.label-button-icon{
-  margin-right: calc(var(--font-size) / 4);
-  float: left;
-}
-
-.active {
-  cursor: pointer;
-
-  &.swf-button:hover {
-    background: var(--hover-base-color);
-    border-color: var(--hover-border-color);
-    color: var(--hover-text-color);
+  .content{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  &.swf-button:focus {
-    background: var(--active-base-color);
-    border: var(--border-style) var(--active-border-color) var(--border-width);
-    color: var(--active-text-color);
-    outline: none;
+  .has-icon{
+    padding: 0 calc(var(--font-size) / 2);
+  }
+
+  .button-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .label-button-icon{
+    margin-right: calc(var(--font-size) / 4);
+    float: left;
+  }
+
+  .active {
+    cursor: pointer;
+
+    &.swf-button:hover {
+      background: var(--hover-base-color);
+      border-color: var(--hover-border-color);
+      color: var(--hover-text-color);
+    }
+
+    &.swf-button:focus {
+      background: var(--active-base-color);
+      border: var(--border-style) var(--active-border-color) var(--border-width);
+      color: var(--active-text-color);
+      outline: none;
+    }
   }
 }
+
