--- a/src/Alert/_alert.scss
+++ b/src/Alert/_alert.scss
@@ -1,4 +1,4 @@
-.alert-container{
+.swf-alert-container{
   border: 1px solid black;
   border-radius: 1rem;
   display: grid;
@@ -12,32 +12,34 @@
 
   max-width: 100%;
   grid-template-columns: 24px 1fr max-content;
+
+  swf-button{
+    //margin: 0 !important;
+    height: fit-content;
+  }
+
+  .alert-text{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    //white-space: nowrap;
+  }
+
+  .alert-content{
+    width: 100%;
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  .alert-header{
+    font-weight: bold;
+  }
+
+  .alert-icon{
+    margin: auto;
+  }
 }
 
-.swf-button{
-  //margin: 0 !important;
-  height: fit-content;
-}
-
-.alert-text{
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  //white-space: nowrap;
-}
-
-.alert-content{
-  width: 100%;
-  display: inline-block;
-  overflow: hidden;
-}
-
-.alert-header{
-  font-weight: bold;
-}
-
-.alert-icon{
-  margin: auto;
-}
+.
