--- a/src/Card/_card.scss
+++ b/src/Card/_card.scss
@@ -1,6 +1,3 @@
-$white-color: #fff;
-$card-background-color: #fff;
-
 .swf-card {
   display: flex;
   flex-direction: column;
@@ -9,9 +6,9 @@ $card-background-color: #fff;
   width: 100%;
   padding: 1rem;
   border-radius: 1rem;
-  box-shadow: -1px 1px 10px RGBA(var(--now-color--neutral-3,209,214,214));
+  background: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
-  background:  $white-color;
   margin: 1rem 1rem 1rem 3px;
 
   &.vertical {
@@ -31,19 +28,5 @@ $card-background-color: #fff;
   &.--l {
     max-width: 100%;
     min-width: 100%;
-  }
-}
-
-:host(.dark) {
-  .swf-card {
-    background: $card-background-color;
-    box-shadow: 0 0.5rem 1rem rgba(117, 117, 117, 0.5);
-  }
-}
-
-:host(.light) {
-  .swf-card {
-    background: $white-color;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   }
 }
