--- a/src/Checkbox/_checkbox.scss
+++ b/src/Checkbox/_checkbox.scss
@@ -1,4 +1,4 @@
-.checkbox-container{
+.swf-checkbox-container{
   --checkbox-cursor: pointer;
   --checkbox-label-color: black;
   --checkbox-required-color: var(--checkbox-label-color);
@@ -26,34 +26,35 @@
   }
 
   cursor: var(--checkbox-cursor);
+
+  .checkbox-information{
+    width: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+  }
+
+
+  .checkbox-input{
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .checkbox-label{
+    align-items: center;
+    margin: auto 4px auto 17px;
+    color: var(--checkbox-label-color);
+    cursor: var(--checkbox-cursor);
+  }
+
+  .checkbox-required{
+    color: var(--checkbox-required-color);
+    font-size: 1.5rem;
+    overflow: hidden;
+    line-height: 1rem;
+    padding-top: 5px;
+  }
 }
 
-.checkbox-information{
-  width: 100%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-}
-
-
-.checkbox-input{
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.checkbox-label{
-  align-items: center;
-  margin: auto 4px auto 17px;
-  color: var(--checkbox-label-color);
-  cursor: var(--checkbox-cursor);
-}
-
-.checkbox-required{
-  color: var(--checkbox-required-color);
-  font-size: 1.5rem;
-  overflow: hidden;
-  line-height: 1rem;
-  padding-top: 5px;
-}
