--- a/lib/Checkbox/_checkbox.scss
+++ b/lib/Checkbox/_checkbox.scss
@@ -47,6 +47,7 @@
     margin: auto 4px auto 17px;
     color: var(--checkbox-label-color);
     cursor: var(--checkbox-cursor);
+    font: 400 1rem Arial;
   }
 
   .checkbox-required{
