--- a/lib/Dropdown/_dropdown.scss
+++ b/lib/Dropdown/_dropdown.scss
@@ -57,6 +57,7 @@
       color: black;
       overflow: auto;
       background: white;
+      font: 400 1rem Arial;
 
       max-height: 15rem;
     }
