Label Value added

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -20,3 +20,4 @@
 @import "./Toggle/toogle";
 @import "./Preloader/preloader";
 @import "./Accordion/accordion";
+@import "./LabelValue/labelvalue";
