--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -2,6 +2,7 @@
 
 .stepper {
   height: 100%;
+  width: 100%;
 
   &-container {
     width: 100%;
@@ -43,7 +44,7 @@
   }
 
   &-item {
-    min-width: 200px;
+    max-width: 150px;
     flex: 1 1 0;
 
     //hide first & last step-line
@@ -85,14 +86,14 @@
 
     &:hover {
       &::after {
-        content: '';
+        content: "";
         display: block;
         position: absolute;
-        width: 100%;
-        height: 100%;
-
+        width: 80%;
+        height: 80%;
         background-color: var(--link-color);
-        opacity: 0.25;
+        opacity: .25;
+        border-radius: 50%;
       }
     }
   }
