--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@
 @import "./Popover/popover";
 @import "./RadioButtons/radio_button";
 @import "./SmallCalendar/small_callendar";
-@import "./Stepper/stepper";
+@import "./Stepper/Stepper";
 @import "./Tab/tab";
 @import "./TextArea/text_area";
 @import "./Toggle/toogle";
