--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -198,7 +198,7 @@
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .modal-footer {
