added required, visible, invalid to inputs

--- a/lib/Dropdown/_dropdown.scss
+++ b/lib/Dropdown/_dropdown.scss
@@ -23,19 +23,19 @@
     overflow: auto;
   }
 
-
     .dropdown-button {
+      position: relative;
+      width: inherit;
+      height: 2rem;
       display: flex;
       justify-content: right;
       align-items: center;
-      width: inherit;
       white-space: nowrap;
       cursor: pointer;
       padding: var(--dropdown-padding) calc(var(--dropdown-padding) + 12px) var(--dropdown-padding) var(--dropdown-padding);
       border-radius: 0.5rem;
       border: none;
       background: rgb(228, 230, 231);
-      height: 2rem;
       color: black;
 
       &.opened {
@@ -47,21 +47,19 @@
         cursor: default;
         color: rgba(16, 16, 16, 0.3);
       }
-    }
 
-    .dropdown-icon {
-      margin: auto;
-    }
+      &.invalid{
+        border: red solid 1px;
+      }
 
-    .dropdown-caret {
-      display: flex;
-      justify-content: center;
-      align-items: center;
 
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      right: var(--dropdown-padding);
+      .dropdown-caret {
+
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: var(--dropdown-padding);
+      }
     }
 
     .dropdown-item {
