--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -21,3 +21,5 @@
 @import "./Preloader/preloader";
 @import "./Accordion/accordion";
 @import "./LabelValue/labelvalue";
+@import "./InfoMessage/infomessage";
+@import "./RequiredLabel/requiredLabel";
