--- a/lib/Checkbox/_checkbox.scss
+++ b/lib/Checkbox/_checkbox.scss
@@ -5,6 +5,7 @@
 
   display: block;
   position: relative;
+  height: calc(1rem + 6px);
   min-height: 13px;
   min-width: 13px;
   padding: 0 2px;
@@ -16,7 +17,7 @@
   }
 
   &.disabled{
-    --checkbox-label-color: #00000070;
+    --checkbox-label-color: #666666;
     --checkbox-cursor: default;
   }
 
@@ -36,18 +37,27 @@
 
 
   .checkbox-input{
-    margin: auto;
+    margin: 3px;
+    height: 1rem;
+    width: 1rem;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    cursor: pointer;
+    top: 0;
+    //transform: translateY(-50%);
+    z-index: -1;
   }
 
   .checkbox-label{
     align-items: center;
-    margin: auto 4px auto 17px;
+    margin: auto 4px auto calc(1rem + 6px);
+    padding-left: 3px;
     color: var(--checkbox-label-color);
     cursor: var(--checkbox-cursor);
     font: 400 1rem Arial;
+
+    label{
+      cursor: var(--checkbox-cursor);
+    }
   }
 
   .checkbox-required{
@@ -57,5 +67,21 @@
     line-height: 1rem;
     padding-top: 5px;
   }
+
+  .checkbox-container {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    //padding-left: 1rem;
+    height: calc(1rem + 6px);
+    width: 100%;
+  }
+
+  .checkbox-information{
+    height: 100%;
+  }
 }
+
+
+
 
