--- a/lib/Input/_input.scss
+++ b/lib/Input/_input.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: relative;
 
-    label.inp-label {
+    .inp-label {
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
       font-size: 1rem;
       font-weight: 300;
@@ -16,44 +16,37 @@
       background: #fff;
       padding: 4px;
       transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-    }
 
-    label.--moved {
-      transform: translate(14px, -14px) scale(0.75);
-    }
+      &.--moved {
+        transform: translate(14px, -14px) scale(0.75);
+      }
 
-    label.--focused {
-      color: #007bff;
-    }
-
-    label.--invalid {
-      color: red;
-    }
-
-    .inp-required{
-      position: absolute;
-      background: #fff;
-      z-index: 100;
-      padding: 2px;
-      transform: translate(10px,-5px);
-
-      &.--focused{
+      &.--focused {
         color: #007bff;
       }
 
-      &.--invalid{
+      &.--invalid {
         color: red;
       }
+
+      label{
+        padding-right: 3px;
+      }
+
+      .inp-required{
+        transform: translateY(-50%);
+
+      }
+
     }
 
-    .input-group {
-      position: relative;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: stretch;
-      width: 100%;
-    }
-
+  .input-group {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    width: 100%;
+  }
 
     .input-group > .form-control {
       position: relative;
@@ -188,50 +181,7 @@
       }
     }
 
-  .input-message{
-    margin: 3px 0 0 0;
-    padding: 3px 5px;
-    border-radius: 0.25rem;
-    display: flex;
-    align-content: center;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 
-    background: #f2dede;
-    color: red;
-
-    &.warning{
-      background: #faebcc;
-      color: orangered;
-    }
-
-    &.positive{
-      background: #dff0d8;
-      color: green;
-    }
-
-    &.info{
-      background: #d9edf7;
-      color: cornflowerblue;
-    }
-
-    &.suggestion{
-      background: lavender;
-      color: blueviolet;
-    }
-  }
-
-  .input-message-content{
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  .input-message-icon{
-    margin: auto 5px auto 0;
-  }
 
 }
 
