--- a/lib/Input/_input.scss
+++ b/lib/Input/_input.scss
@@ -16,14 +16,15 @@
       background: #fff;
       padding: 4px;
       transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    }
 
-      &.--moved {
-        transform: translate(14px, -14px) scale(0.75);
-      }
+    label.--moved {
+      transform: translate(14px, -14px) scale(0.75);
+    }
 
-      &.--focused {
-        color: #007bff;
-      }
+    label.--focused {
+      color: #007bff;
+    }
 
       &.--invalid {
         color: red;
