fix: delete logs

--- a/lib/Input/_input.scss
+++ b/lib/Input/_input.scss
@@ -23,6 +23,10 @@
       color: #007bff;
     }
 
+    label.--readonly {
+      color: #BDBDBD;
+    }
+
     label.--invalid {
       color: red;
     }
@@ -164,6 +168,7 @@
       background-color: #fff;
       border-color: #007bff;
       box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+      outline: none;
 
       &.--invalid {
         border-color: red;
@@ -171,8 +176,10 @@
       }
 
       &.--readonly {
-        border-color: #becad6;
+        border-color: rgb(190, 202, 214);
         box-shadow: none;
+        color: #BDBDBD;
+        outline: none;
       }
     }
 
@@ -184,12 +191,6 @@
         box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
       }
     }
-
-
-  .--readonly {
-    color: #BDBDBD;
-  }
-
 }
 
 
