--- a/src/FilterConditionBuilder/_filter_condition_builder.scss
+++ b/src/FilterConditionBuilder/_filter_condition_builder.scss
@@ -5,6 +5,7 @@
 @import "./Components//FilterDropdownList//filter_dropdown_list";
 @import "./Components/FilterBreadcrumbs/filter_breadcrumbs";
 @import "./Components/ExpandDropdown/dropdown";
+@import "./Components/FilterSaver/filter_saver";
 
 .collapsed-filter-header {
     display: flex;
